2002-11-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b29

	* Fixed bug #638939: Publish XP gives wrong URL (Guido Claessen)
	  We were hand rolling the URL that appears at the end of the wizard,
	  which would lead to it not working when rewriting is disabled.

	* Tightened up the description of the publisher

	* Fixed a bug where the search function lowercases the result values
	  that it displays in context.  Thanks to Beckett Madden-Woods for the
	  patch. 

2002-11-13  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b28

	* Rolled in Joan McGalliard's patch to allow users to add captions
	  when uploading photos.  Thanks, Joan!

2002-11-12  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b27

	* Tested the XP Publishing code, made a few tweaks to make it a bit
	  more presentable.  Included end-user documentation for how to use it.

	  The XP publishing code is only available when Gallery is running
	  in standalone mode, because of the complexity of generating the
	  right URLs for the browser when embedded.

2002-11-11  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b26

	* Fixed escaping of line breaks in GalleryRemoteProperties.php
	
2002-11-10  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b25

	* Grant canViewFullImages to EVERYBODY by default in new Albums

	* Added publish_xp, a tool for publishing to Gallery directly from your
	  Windows XP desktop, thanks to Demian Johnston!
	
2002-11-09  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b24

	* Fixed bug #587441: wrong # of photos resized w/ hidden pics
	  Turns out that if you can resize all photos then you can also see all
	  the hidden ones.  So, resize all now applies to all photos.

2002-11-08  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b23

	* Fixed a bug in the slideshow where it was not obeying the "can view
	  full size images" permission properly (thanks to Akki)

2002-11-07  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b22
