@@ -1,3 +1,11 @@
+2002-11-17  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b30
+
+	* Fixed bug introduced in b21 causing [reset counter] link on
+	  albums.php page to fail.
+
+	* Fixed bug in the new "add caption with photo" code which generated an
+	  error when you add a photo by URL or local-file.
+
 2002-11-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b29
 
 	* Fixed bug #638939: Publish XP gives wrong URL (Guido Claessen)
